otatools-keys: include updatekeys.sh
* To update an existing keyset

Change-Id: If3971980fb2d08ac17c12843aaa9a2b4110df0d4

--- a/core/Makefile
+++ b/core/Makefile
@@ -4220,7 +4220,8 @@ INTERNAL_OTATOOLS_KEYS_PACKAGE_FILES := \
   $(INTERNAL_OTATOOLS_PACKAGE_FILES) \
   development/tools/make_key \
   vendor/calyx/scripts/mkkey.sh \
-  vendor/calyx/scripts/mkkeys.sh
+  vendor/calyx/scripts/mkkeys.sh \
+  vendor/calyx/scripts/updatekeys.sh
 endif
 
 BUILT_OTATOOLS_PACKAGE := $(PRODUCT_OUT)/otatools.zip
